# backend/cmd/server/main.go
@@ -82,6 +82,7 @@ func main() {
 	breedRepo := pgrepositories.NewEntBreedRepository(db)
 	bloodRepo := pgrepositories.NewEntBloodInfoRepository(db)
 	locationRepo := pgrepositories.NewEntLocationRepository(db)
+	bloodreqRepo := pgrepositories.NewEntBloodRequestRepository(db)
 
 	// Создаем репозиторий в зависимости от наличия кэша
 	var bloodRepoInit repositories.BloodInfoRepository
@@ -98,14 +99,12 @@ func main() {
 	// Инициализация сервисов
 	userService := services.NewUserService(userRepo, locationRepo)
 	petService := services.NewPetService(petRepo, userRepo, s3VKCloud)
-
-	// Инициализация клиента blood search микросервиса
-	// bloodSearchClient := *services.NewBloodRequestClient(serverConfig.BloodMicroserviceURL)
+	bloodReqService := services.NewBloodSearchService(bloodreqRepo, petRepo)
 
 	// Инициализация обработчиков HTTP запросов (хэндлеров)
 	userHandler := handlers.NewUserHandler(userService)
 	petHandler := handlers.NewPetHandler(petService)
-	// bloodRequestHandler := handlers.NewBloodRequestHandler(bloodSearchClient)
+	bloodRequestHandler := handlers.NewBloodRequestHandler(bloodReqService)
 	referenceHandler := handlers.NewReferenceHandler(breedRepo, bloodRepoInit, locationRepo)
 	devHandler := handlers.NewDevHandler(userRepo)
 
@@ -164,11 +163,11 @@ func main() {
 	petGroup.GET("/upload/avatar/:id", petHandler.GetAvatarUploadURL)                // Получение ссылки на загрузку в фотографии питомцев в storage
 	petGroup.POST("/upload/avatar/confirm/:path", petHandler.ConfirmPetAvatarUpload) // Подтверждение загрузки
 
-	// // Группа маршрутов для пула запросов крови
-	// bloodRequestGroup := v1.Group("/blood-request")
+	// Группа маршрутов для пула запросов крови
+	bloodRequestGroup := v1.Group("/blood-request")
 
-	// bloodRequestGroup.POST("/pool", bloodRequestHandler.AddPetToBloodRequestPool)           // Добавить питомца в пул поиска крови
-	// bloodRequestGroup.POST("/pool/search", bloodRequestHandler.GetPetsFromBloodRequestPool) // Получить питомцев из пула поиска крови
+	bloodRequestGroup.POST("/pool", bloodRequestHandler.AddPetToBloodRequestPool)           // Добавить питомца в пул поиска крови
+	bloodRequestGroup.POST("/pool/search", bloodRequestHandler.GetPetsFromBloodRequestPool) // Получить питомцев из пула поиска крови
 
 	// Группа маршрутов для справочных данных
 	referenceGroup := v1.Group("/reference")
